--- a/rhb registration/Base.lproj/LaunchScreen.storyboard
+++ b/rhb registration/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-1-splashScreen-top-banner" translatesAutoresizingMaskIntoConstraints="NO" id="mSF-Mo-JCq">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="ahQ-01-qoa"/>
                                 </constraints>
@@ -31,7 +31,7 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-3-splashScreen-logo" translatesAutoresizingMaskIntoConstraints="NO" id="r2c-pI-33l">
-                                <rect key="frame" x="50" y="166" width="274" height="155"/>
+                                <rect key="frame" x="50" y="166" width="275" height="155"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="155" id="XxI-ab-2MH"/>
                                 </constraints>
@@ -53,7 +53,7 @@
                             <constraint firstItem="jmp-jc-lEU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Q7b-Z4-K5P"/>
                             <constraint firstItem="mSF-Mo-JCq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="fw6-mm-bTF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jmp-jc-lEU" secondAttribute="bottom" id="gp2-Qt-ikc"/>
-                            <constraint firstItem="mSF-Mo-JCq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="quh-RB-m9p"/>
+                            <constraint firstItem="mSF-Mo-JCq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="quh-RB-m9p"/>
                             <constraint firstItem="r2c-pI-33l" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="vWk-xh-bp2"/>
                             <constraint firstAttribute="trailing" secondItem="mSF-Mo-JCq" secondAttribute="trailing" id="x5k-WJ-voL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerY" secondItem="r2c-pI-33l" secondAttribute="centerY" constant="100" id="ydl-wR-xqU"/>
