--- a/rhb registration/Controllers/Login Screen/RhbLoginViewController.xib
+++ b/rhb registration/Controllers/Login Screen/RhbLoginViewController.xib
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,23 +21,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXx-Tz-w8v" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-3-splashScreen-logo" translatesAutoresizingMaskIntoConstraints="NO" id="Cnp-JX-xBV" userLabel="Top Logo">
-                            <rect key="frame" x="16" y="36" width="287" height="95"/>
+                            <rect key="frame" x="16" y="36" width="343" height="144.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="5RK-Ke-jTA"/>
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZZ-1x-oNY" userLabel="Login Form">
-                            <rect key="frame" x="16" y="139" width="288" height="270"/>
+                            <rect key="frame" x="16" y="188.5" width="343" height="270"/>
                             <subviews>
-                                <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYs-pS-1GX">
-                                    <rect key="frame" x="116" y="8" width="57" height="22"/>
+                                <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYs-pS-1GX">
+                                    <rect key="frame" x="16" y="8" width="57" height="22"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="22" id="Vr3-yJ-F5x"/>
@@ -48,14 +46,14 @@
                                     <color key="textColor" red="0.0" green="0.49803921569999998" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G5a-xX-8Uc" customClass="RhbUnderlinedTextField" customModule="rhb_registration" customModuleProvider="target">
-                                    <rect key="frame" x="36" y="62" width="215" height="40"/>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G5a-xX-8Uc" customClass="RhbUnderlinedTextField" customModule="rhb_registration" customModuleProvider="target">
+                                    <rect key="frame" x="16" y="62" width="311" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="dFT-0e-Zjo"/>
                                     </constraints>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="username"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="underLineColor">
                                             <color key="value" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -65,8 +63,8 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMT-Gr-ucv" customClass="RhbUnderlinedTextField" customModule="rhb_registration" customModuleProvider="target">
-                                    <rect key="frame" x="36" y="120" width="216" height="40"/>
+                                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMT-Gr-ucv" customClass="RhbUnderlinedTextField" customModule="rhb_registration" customModuleProvider="target">
+                                    <rect key="frame" x="16" y="120" width="311" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="I1j-q9-b1e"/>
                                     </constraints>
@@ -83,7 +81,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PMs-Kj-3Ae" userLabel="See Button">
-                                    <rect key="frame" x="225.5" y="133.5" width="26.5" height="13"/>
+                                    <rect key="frame" x="300.5" y="133.5" width="26.5" height="13"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="PMs-Kj-3Ae" secondAttribute="height" multiplier="2:1" id="Qik-KM-9EZ"/>
                                     </constraints>
@@ -93,15 +91,27 @@
                                         <action selector="showPasswordTextReleased:" destination="-1" eventType="touchUpInside" id="bhO-ze-Iul"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="llR-lw-I3e" userLabel="Checkbox" customClass="RhbCheckBoxButton" customModule="rhb_registration" customModuleProvider="target">
+                                    <rect key="frame" x="16" y="174" width="22" height="22"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="22" id="5gM-ub-Sau"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xB-PI-09D">
+                                    <rect key="frame" x="48" y="176.5" width="94" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.36881510416666669" green="0.38974896599264702" blue="0.45610894097222221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q74-KF-07d" userLabel="Login Button" customClass="CustomButton" customModule="rhb_registration" customModuleProvider="target">
-                                    <rect key="frame" x="69" y="190" width="150" height="33"/>
+                                    <rect key="frame" x="16" y="221" width="311" height="33"/>
                                     <color key="backgroundColor" red="0.0" green="0.49803921569999998" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="33" id="ktP-bN-scA"/>
-                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="o17-oZ-vkp"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <state key="normal" title="Login">
+                                    <state key="normal" title="Masuk">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
@@ -120,40 +130,27 @@
                                         <action selector="loginButtonTapped:" destination="-1" eventType="touchUpInside" id="wn5-UW-vvB"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="llR-lw-I3e" userLabel="Checkbox" customClass="RhbCheckBoxButton" customModule="rhb_registration" customModuleProvider="target">
-                                    <rect key="frame" x="36" y="248" width="22" height="22"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="22" id="5gM-ub-Sau"/>
-                                    </constraints>
-                                    <state key="normal" title="Button"/>
-                                </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xB-PI-09D">
-                                    <rect key="frame" x="68" y="250.5" width="94" height="17"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <color key="textColor" red="0.36881510416666669" green="0.38974896599264702" blue="0.45610894097222221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="DMT-Gr-ucv" firstAttribute="centerX" secondItem="G5a-xX-8Uc" secondAttribute="centerX" id="33l-Jj-ZH5"/>
                                 <constraint firstItem="G5a-xX-8Uc" firstAttribute="centerX" secondItem="STw-dH-xK3" secondAttribute="centerX" id="5Pl-Wi-nQS"/>
+                                <constraint firstItem="llR-lw-I3e" firstAttribute="top" secondItem="DMT-Gr-ucv" secondAttribute="bottom" constant="14" id="7e8-qu-iRx"/>
                                 <constraint firstItem="PMs-Kj-3Ae" firstAttribute="height" secondItem="DMT-Gr-ucv" secondAttribute="height" multiplier="1/3" id="9Yz-E3-hea"/>
                                 <constraint firstItem="G5a-xX-8Uc" firstAttribute="top" secondItem="VYs-pS-1GX" secondAttribute="bottom" constant="32" id="AHy-YJ-Dhe"/>
                                 <constraint firstItem="Q74-KF-07d" firstAttribute="centerX" secondItem="DZZ-1x-oNY" secondAttribute="centerX" id="MxC-Y8-BHO"/>
                                 <constraint firstItem="PMs-Kj-3Ae" firstAttribute="trailing" secondItem="DMT-Gr-ucv" secondAttribute="trailing" id="Q1I-uA-bIl"/>
-                                <constraint firstItem="STw-dH-xK3" firstAttribute="bottom" secondItem="llR-lw-I3e" secondAttribute="bottom" id="W9U-ne-Ybg"/>
+                                <constraint firstItem="Q74-KF-07d" firstAttribute="leading" secondItem="DMT-Gr-ucv" secondAttribute="leading" id="QLK-W5-JiR"/>
                                 <constraint firstItem="DMT-Gr-ucv" firstAttribute="leading" secondItem="G5a-xX-8Uc" secondAttribute="leading" id="X1r-JC-cgV"/>
+                                <constraint firstItem="Q74-KF-07d" firstAttribute="top" secondItem="llR-lw-I3e" secondAttribute="bottom" constant="25" id="YTT-vz-W4w"/>
                                 <constraint firstItem="llR-lw-I3e" firstAttribute="leading" secondItem="G5a-xX-8Uc" secondAttribute="leading" id="cBH-nW-MMu"/>
                                 <constraint firstItem="DMT-Gr-ucv" firstAttribute="top" secondItem="G5a-xX-8Uc" secondAttribute="bottom" constant="18" id="cQA-iZ-YBJ"/>
-                                <constraint firstItem="VYs-pS-1GX" firstAttribute="centerX" secondItem="DZZ-1x-oNY" secondAttribute="centerX" id="fxN-D7-Jqx"/>
                                 <constraint firstItem="VYs-pS-1GX" firstAttribute="top" secondItem="DZZ-1x-oNY" secondAttribute="top" constant="8" id="h4Y-rb-qUa"/>
                                 <constraint firstItem="3xB-PI-09D" firstAttribute="leading" secondItem="llR-lw-I3e" secondAttribute="trailing" constant="10" id="juG-dZ-EPR"/>
-                                <constraint firstItem="Q74-KF-07d" firstAttribute="top" secondItem="DMT-Gr-ucv" secondAttribute="bottom" constant="30" id="kNs-sP-AHZ"/>
+                                <constraint firstItem="VYs-pS-1GX" firstAttribute="leading" secondItem="G5a-xX-8Uc" secondAttribute="leading" id="ohb-Yk-vj8"/>
                                 <constraint firstItem="PMs-Kj-3Ae" firstAttribute="centerY" secondItem="DMT-Gr-ucv" secondAttribute="centerY" id="p13-UI-RoK"/>
                                 <constraint firstAttribute="height" constant="270" id="tl6-9h-cOY"/>
-                                <constraint firstItem="Q74-KF-07d" firstAttribute="leading" secondItem="STw-dH-xK3" secondAttribute="leading" constant="69" id="wHA-x9-dUX"/>
-                                <constraint firstItem="G5a-xX-8Uc" firstAttribute="leading" secondItem="STw-dH-xK3" secondAttribute="leading" constant="36" id="xNl-2q-LHa"/>
+                                <constraint firstItem="G5a-xX-8Uc" firstAttribute="leading" secondItem="STw-dH-xK3" secondAttribute="leading" constant="16" id="xNl-2q-LHa"/>
                                 <constraint firstItem="3xB-PI-09D" firstAttribute="centerY" secondItem="llR-lw-I3e" secondAttribute="centerY" id="ztJ-h3-cjX"/>
                             </constraints>
                             <viewLayoutGuide key="safeArea" id="STw-dH-xK3"/>
@@ -172,7 +169,7 @@
                     <viewLayoutGuide key="safeArea" id="8F9-r2-wrZ"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-1-splashScreen-top-banner" translatesAutoresizingMaskIntoConstraints="NO" id="CBv-aF-QF4" userLabel="Rhb Color Line">
-                    <rect key="frame" x="0.0" y="20" width="320" height="10"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="10"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="10" id="88g-ar-EVo"/>
                     </constraints>
@@ -190,6 +187,7 @@
                 <constraint firstItem="fXx-Tz-w8v" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="YCG-T8-NEo"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="21" y="-425"/>
         </view>
     </objects>
     <resources>
