- successfully liver render the segment view

--- a/rhb registration/Controllers/Cover Screen/RegisterInfoViewController.xib
+++ b/rhb registration/Controllers/Cover Screen/RegisterInfoViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,14 +30,19 @@
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b-2-LoginPage-ARO" translatesAutoresizingMaskIntoConstraints="NO" id="ZV7-Va-Ppn" userLabel="Middle Logo">
-                    <rect key="frame" x="14.5" y="150" width="360.5" height="222.5"/>
+                    <rect key="frame" x="15" y="150" width="360" height="222.5"/>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sp3-4G-FoZ" customClass="RHBPreRegisterSegmentView" customModule="rhb_registration" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sp3-4G-FoZ" customClass="RHBChoiceSegmentView" customModule="rhb_registration" customModuleProvider="target">
                     <rect key="frame" x="34" y="432.5" width="307" height="50"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="xOf-Iq-V4h"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="leftButtonText" value="Open a Free Account"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftButtonSelected" value="YES"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="rightButtonText" value="Login Now"/>
+                    </userDefinedRuntimeAttributes>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-1-splashScreen-top-banner" translatesAutoresizingMaskIntoConstraints="NO" id="88E-0P-FSX">
                     <rect key="frame" x="0.0" y="20" width="375" height="10"/>
